js/js.translator/testData/incremental/invalidation/companionFunction/lib1/l1.1.kt
interface MyInterface {
    fun interfaceFunction(): String
}

class MyClass1 {
    companion object {
        fun companionFunction() = 1
    }
}

class MyClass2 {
    companion object {
        fun companionFunction() = "1"
    }
}
